--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Maplecms/github.com">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Maplecms/yiicms.net">View on GitHub</a>
 
           <h1 id="project_title">yiicms.net</h1>
           <h2 id="project_tagline">Swift</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Maplecms/github.com/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Maplecms/github.com/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Maplecms/yiicms.net/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Maplecms/yiicms.net/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -62,6 +62,8 @@ $ git checkout gh-pages
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+
+<p>website:  <a href="http://www.yiicms.net">yiicms.net</a></p>
       </section>
     </div>
 
